# Data-Science-2025

./: completion_analysis.csv  completion_analysis.json  monitoring_support_guide.md  team_management_guide.md  update_log.txt  verify_setup.py
Assignments/assignment-28/: assignment_gpu_accelerated.md  assignment_titanic.md
Assignments/assignment-29/: assignment_gpu_accelerated.md  assignment_titanic.md
Class_notes/week-36/: pyspark.html  pyspark.ipynb  pyspark.py
Class_notes/week-37/: Lecture-12.4-learn-more-about-hbase.pptx  main.py  pyproject.toml
Class_notes/week-38/: main.py  pyproject.toml
Class_notes/week-39/: Module-14-Lab-classification-random-forest.html  Module-14-Lab-classification-random-forest.ipynb  Module-14-Lab-classification-random-forest.py  pyproject.toml  setup.md
Class_notes/week-40/: 14&15module_summary.md  Module-15-Lab-dim-red-vis.html  Module-15-Lab-dim-red-vis.ipynb  Module-15-Lab-dim-red-vis.py  module15_summary.md  notes-15.1-unsupervised-learning.md  notes-15.2-kmeans-hierarchical-clustering.md  notes-15.3-rapids-kmeans.md  notes-15.4-dbscan.md  notes-15.5-tsne.md  notes-15.6-umap.md  notes-15.7-visualizing-clusters.md  notes-15.8-rapids-pca-umap-dbscan.md  notes.md  pyproject.toml  setup.md  student.ipynb
Class_notes/week-42/: Module-20-Lab-latent-semantic-indexing.html  Module-20-Lab-latent-semantic-indexing.ipynb  Module-20-Lab-latent-semantic-indexing.py
Class_notes/week-43/: DLI Online Course - Accelerating End-to-End Data Science Workflows.html  Module-21-Lab-acc-workloads-rapids.html  Module-21-Lab-acc-workloads-rapids.ipynb  Module-21-Lab-acc-workloads-rapids.py  Module-21-Lab-intro-to-acc-networkx.html  Module-21-Lab-intro-to-acc-networkx.ipynb  Module-21-Lab-intro-to-acc-pandas.html  Module-21-Lab-intro-to-acc-pandas.ipynb  Module-21-Lab-intro-to-acc-polars-engine.html  Module-21-Lab-intro-to-acc-polars-engine.ipynb
Class_notes/week-44/: assignment_team_project.md  lecture.md  pyproject.toml  students.md
Class_notes/week-45/: assignment_git_workflow.md  lecture.md  pyproject.toml  students.md
Class_notes/week-46/: Phase 1: Planning & Setup - Student Version.md  Phase 1: Planning & Setup .md  README_GCP.md  environment_setup_guide.md  environment_setup_guide_gcp.md  etl_usage_guide.md  etl_usage_guide_gcp.md  fake_news_detection_workflow.md  fake_news_detection_workflow_gcp.md  lecture.md  monitoring_support_guide.md  project_kickoff_guide.md  project_kickoff_guide_gcp.md  student_onboarding_guide.md  student_onboarding_guide_gcp.md  students.md  team_management_guide_gcp.md  verify_setup_gcp.py
Submissions/assignments/Elsa/: Assigment_23A.ipynb  Assignment_19.ipynb  assigment_20.ipynb  assignment 6.ipynb  employee_assignment 24.sql  imdb assignment 24.sql
Submissions/assignments/Lamech/: Understanding Complexity Classes Assignment 23.ipynb  assignment 22 submission.ipynb
Submissions/assignments/Nehemiah/: Assignment25.ipynb  assignment28_gpu_accelerated.md.ipynb  assignment28_titanic.md.ipynb  week 24.ipynb
Submissions/assignments/Nehemiah/assign24-29/: Assignment26.ipynb  assignment29_gpu_accelerated.md.ipynb  assignment29_titanic.md.ipynb
Submissions/projects/Nehemiah/: Fake News Detection_ CPU vs GPU Performance.py
