[project]
name = "12-module-scalable-computing-hbase"
version = "0.1.0"
description = "HBase Module for Scalable Computing - Data Science Course"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "happybase>=1.2.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "requests>=2.31.0"
]
