[project]
name = "14-module-machine-learning-classification"
version = "0.1.0"
description = "Machine Learning Classification Module - Data Science Course"
requires-python = ">=3.13"
dependencies = [
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0"
]