[project]
name = "15-module-machine-learning-clustering-and-dimensionality-reduction"
version = "0.1.0"
description = "Machine Learning Clustering and Dimensionality Reduction Module - Data Science Course"
requires-python = ">=3.13"
dependencies = [
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "umap-learn>=0.5.0",
    "hdbscan>=0.8.0"
]